tests/rosetta/transpiler/Zig/abbreviations-automatic.error
zig build: exit status 1
/tmp/abbreviations-automatic.zig:241:36: error: expected type 'usize', found 'i32'
/tmp/abbreviations-automatic.zig:241:36: note: unsigned 64-bit int cannot represent all possible signed 32-bit values
