tests/rosetta/transpiler/Zig/abbreviations-automatic.zig
// Generated by Mochi compiler v0.10.30 on 2025-07-19T00:26:04Z
const std = @import("std");

fn _slice_string(s: []const u8, start: i32, end: i32, step: i32) []const u8 {
    var sidx = start;
    var eidx = end;
    var stp = step;
    const n: i32 = @as(i32, @intCast(s.len));
    if (sidx < 0) sidx += n;
    if (eidx < 0) eidx += n;
    if (stp == 0) stp = 1;
    if (sidx < 0) sidx = 0;
    if (eidx > n) eidx = n;
    if (stp > 0 and eidx < sidx) eidx = sidx;
    if (stp < 0 and eidx > sidx) eidx = sidx;
    var res = std.ArrayList(u8).init(std.heap.page_allocator);
    defer res.deinit();
    var i: i32 = sidx;
    while ((stp > 0 and i < eidx) or (stp < 0 and i > eidx)) : (i += stp) {
        res.append(s[@as(usize, @intCast(i))]) catch |err| handleError(err);
    }
    return res.toOwnedSlice() catch |err| handleError(err);
}

fn _concat_string(a: []const u8, b: []const u8) []const u8 {
    const alloc = std.heap.page_allocator;
    return std.mem.concat(alloc, u8, &[_][]const u8{ a, b }) catch |err| handleError(err);
}

fn handleError(err: anyerror) noreturn {
    std.debug.panic("{any}", .{err});
}

fn fields(s: []const u8) []const []const u8 {
    var words: []u8 = &[_]u8{};
    var cur: []const u8 = ""; // []const u8
    var i: i32 = 0; // i32
    while (i < @as(i32, @intCast((s).len))) {
        const ch = _slice_string(s, i, (i + 1), 1); // []const u8
        if ((std.mem.eql(u8, ch, " ") or std.mem.eql(u8, ch, "\n")) or std.mem.eql(u8, ch, "\t")) {
            if (@as(i32, @intCast((cur).len)) > 0) {
                words = blk0: {
                    var _tmp0 = std.ArrayList([]const u8).init(std.heap.page_allocator);
                    defer _tmp0.deinit();
                    _tmp0.appendSlice(words.items) catch |err| handleError(err);
                    _tmp0.append(cur) catch |err| handleError(err);
                    const res = _tmp0.toOwnedSlice() catch |err| handleError(err);
                    break :blk0 res;
                };
                cur = "";
            }
        } else {
            cur = _concat_string(cur, ch);
        }
        i = (i + 1);
    }
    if (@as(i32, @intCast((cur).len)) > 0) {
        words = blk1: {
            var _tmp1 = std.ArrayList([]const u8).init(std.heap.page_allocator);
            defer _tmp1.deinit();
            _tmp1.appendSlice(words.items) catch |err| handleError(err);
            _tmp1.append(cur) catch |err| handleError(err);
            const res = _tmp1.toOwnedSlice() catch |err| handleError(err);
            break :blk1 res;
        };
    }
    return words.items;
}

fn takeRunes(s: []const u8, n: i32) []const u8 {
    var idx: i32 = 0; // i32
    var count: i32 = 0; // i32
    while (idx < @as(i32, @intCast((s).len))) {
        if (count == n) {
            return s[0..@as(usize, @intCast(idx))];
        }
        idx = (idx + 1);
        count = (count + 1);
    }
    return s;
}

fn distinct(xs: []const []const u8) []const []const u8 {
    var m = std.AutoHashMap([]const u8, bool).init(std.heap.page_allocator);
    var out: []u8 = &[_]u8{};
    var i: i32 = 0; // i32
    while (i < @as(i32, @intCast((xs).len))) {
        const x = xs[i]; // []const u8
        if (!(m.contains(x))) {
            _ = m.put(x, true) catch |err| handleError(err);
            out = blk2: {
                var _tmp2 = std.ArrayList([]const u8).init(std.heap.page_allocator);
                defer _tmp2.deinit();
                _tmp2.appendSlice(out.items) catch |err| handleError(err);
                _tmp2.append(x) catch |err| handleError(err);
                const res = _tmp2.toOwnedSlice() catch |err| handleError(err);
                break :blk2 res;
            };
        }
        i = (i + 1);
    }
    return out.items;
}

fn abbrevLen(words: []const []const u8) i32 {
    const size = @as(i32, @intCast((words).len)); // i32
    var l: i32 = 1; // i32
    while (true) {
        var abbrs: []u8 = &[_]u8{};
        var i: i32 = 0; // i32
        while (i < size) {
            abbrs = blk3: {
                var _tmp3 = std.ArrayList([]const u8).init(std.heap.page_allocator);
                defer _tmp3.deinit();
                _tmp3.appendSlice(abbrs.items) catch |err| handleError(err);
                _tmp3.append(takeRunes(words[i], l)) catch |err| handleError(err);
                const res = _tmp3.toOwnedSlice() catch |err| handleError(err);
                break :blk3 res;
            };
            i = (i + 1);
        }
        if (@as(i32, @intCast((distinct(abbrs)).len)) == size) {
            return l;
        }
        l = (l + 1);
    }
    return 0;
}

fn pad2(n: i32) []const u8 {
    const s = std.fmt.allocPrint(std.heap.page_allocator, "{d}", .{n}) catch |err| handleError(err); // []const u8
    if (@as(i32, @intCast((s).len)) < 2) {
        return _concat_string(" ", s);
    }
    return s;
}

fn user_main() void {
    const lines = &[_][]const u8{
        "Sunday Monday Tuesday Wednesday Thursday Friday Saturday",
        "Sondag Maandag Dinsdag Woensdag Donderdag Vrydag Saterdag",
        "E_djelë E_hënë E_martë E_mërkurë E_enjte E_premte E_shtunë",
        "Ehud Segno Maksegno Erob Hamus Arbe Kedame",
        "Al_Ahad Al_Ithinin Al_Tholatha'a Al_Arbia'a Al_Kamis Al_Gomia'a Al_Sabit",
        "Guiragui Yergou_shapti Yerek_shapti Tchorek_shapti Hink_shapti Ourpat Shapat",
        "domingu llunes martes miércoles xueves vienres sábadu",
        "Bazar_gÜnÜ Birinci_gÜn Çkinci_gÜn ÜçÜncÜ_gÜn DÖrdÜncÜ_gÜn Bes,inci_gÜn Altòncò_gÜn",
        "Igande Astelehen Astearte Asteazken Ostegun Ostiral Larunbat",
        "Robi_bar Shom_bar Mongal_bar Budhh_bar BRihashpati_bar Shukro_bar Shoni_bar",
        "Nedjelja Ponedeljak Utorak Srijeda Cxetvrtak Petak Subota",
        "Disul Dilun Dimeurzh Dimerc'her Diriaou Digwener Disadorn",
        "nedelia ponedelnik vtornik sriada chetvartak petak sabota",
        "sing_kei_yaht sing_kei_yat sing_kei_yee sing_kei_saam sing_kei_sie sing_kei_ng sing_kei_luk",
        "Diumenge Dilluns Dimarts Dimecres Dijous Divendres Dissabte",
        "Dzeenkk-eh Dzeehn_kk-ehreh Dzeehn_kk-ehreh_nah_kay_dzeeneh Tah_neesee_dzeehn_neh Deehn_ghee_dzee-neh Tl-oowey_tts-el_dehlee Dzeentt-ahzee",
        "dy_Sul dy_Lun dy_Meurth dy_Mergher dy_You dy_Gwener dy_Sadorn",
        "Dimanch Lendi Madi Mèkredi Jedi Vandredi Samdi",
        "nedjelja ponedjeljak utorak srijeda cxetvrtak petak subota",
        "nede^le ponde^lí úterÿ str^eda c^tvrtek pátek sobota",
        "Sondee Mondee Tiisiday Walansedee TOOsedee Feraadee Satadee",
        "s0ndag mandag tirsdag onsdag torsdag fredag l0rdag",
        "zondag maandag dinsdag woensdag donderdag vrijdag zaterdag",
        "Diman^co Lundo Mardo Merkredo ^Jaùdo Vendredo Sabato",
        "pÜhapäev esmaspäev teisipäev kolmapäev neljapäev reede laupäev",
        "Diu_prima Diu_sequima Diu_tritima Diu_quartima Diu_quintima Diu_sextima Diu_sabbata",
        "sunnudagur mánadagur tÿsdaguy mikudagur hósdagur friggjadagur leygardagur",
        "Yek_Sham'beh Do_Sham'beh Seh_Sham'beh Cha'har_Sham'beh Panj_Sham'beh Jom'eh Sham'beh",
        "sunnuntai maanantai tiistai keskiviiko torsktai perjantai lauantai",
        "dimanche lundi mardi mercredi jeudi vendredi samedi",
        "Snein Moandei Tiisdei Woansdei Tonersdei Freed Sneon",
        "Domingo Segunda_feira Martes Mércores Joves Venres Sábado",
        "k'vira orshabati samshabati otkhshabati khutshabati p'arask'evi shabati",
        "Sonntag Montag Dienstag Mittwoch Donnerstag Freitag Samstag",
        "Kiriaki' Defte'ra Tri'ti Teta'rti Pe'mpti Paraskebi' Sa'bato",
        "ravivaar somvaar mangalvaar budhvaar guruvaar shukravaar shanivaar",
        "pópule pó`akahi pó`alua pó`akolu pó`ahá pó`alima pó`aono",
        "Yom_rishon Yom_sheni Yom_shlishi Yom_revi'i Yom_chamishi Yom_shishi Shabat",
        "ravivara somavar mangalavar budhavara brahaspativar shukravara shanivar",
        "vasárnap hétfö kedd szerda csütörtök péntek szombat",
        "Sunnudagur Mánudagur ╞riδjudagur Miδvikudagar Fimmtudagur FÖstudagur Laugardagur",
        "sundio lundio mardio merkurdio jovdio venerdio saturdio",
        "Minggu Senin Selasa Rabu Kamis Jumat Sabtu",
        "Dominica Lunedi Martedi Mercuridi Jovedi Venerdi Sabbato",
        "Dé_Domhnaigh Dé_Luain Dé_Máirt Dé_Ceadaoin Dé_ardaoin Dé_hAoine Dé_Sathairn",
        "domenica lunedí martedí mercoledí giovedí venerdí sabato",
        "Nichiyou_bi Getzuyou_bi Kayou_bi Suiyou_bi Mokuyou_bi Kin'you_bi Doyou_bi",
        "Il-yo-il Wol-yo-il Hwa-yo-il Su-yo-il Mok-yo-il Kum-yo-il To-yo-il",
        "Dies_Dominica Dies_Lunæ Dies_Martis Dies_Mercurii Dies_Iovis Dies_Veneris Dies_Saturni",
        "sve-tdien pirmdien otrdien tresvdien ceturtdien piektdien sestdien",
        "Sekmadienis Pirmadienis Antradienis Trec^iadienis Ketvirtadienis Penktadienis S^es^tadienis",
        "Wangu Kazooba Walumbe Mukasa Kiwanuka Nnagawonye Wamunyi",
        "xing-_qi-_rì xing-_qi-_yi-. xing-_qi-_èr xing-_qi-_san-. xing-_qi-_sì xing-_qi-_wuv. xing-_qi-_liù",
        "Jedoonee Jelune Jemayrt Jecrean Jardaim Jeheiney Jesam",
        "Jabot Manre Juje Wonje Taije Balaire Jarere",
        "geminrongo minòmishi mártes mièrkoles misheushi bèrnashi mishábaro",
        "Ahad Isnin Selasa Rabu Khamis Jumaat Sabtu",
        "sφndag mandag tirsdag onsdag torsdag fredag lφrdag",
        "lo_dimenge lo_diluns lo_dimarç lo_dimèrcres lo_dijòus lo_divendres lo_dissabte",
        "djadomingo djaluna djamars djarason djaweps djabièrna djasabra",
        "Niedziela Poniedzial/ek Wtorek S,roda Czwartek Pia,tek Sobota",
        "Domingo segunda-feire terça-feire quarta-feire quinta-feire sexta-feira såbado",
        "Domingo Lunes martes Miercoles Jueves Viernes Sabado",
        "Duminicª Luni Mart'i Miercuri Joi Vineri Sâmbªtª",
        "voskresenie ponedelnik vtornik sreda chetverg pyatnitsa subbota",
        "Sunday Di-luain Di-màirt Di-ciadain Di-ardaoin Di-haoine Di-sathurne",
        "nedjelja ponedjeljak utorak sreda cxetvrtak petak subota",
        "Sontaha Mmantaha Labobedi Laboraro Labone Labohlano Moqebelo",
        "Iridha- Sandhudha- Anga.haruwa-dha- Badha-dha- Brahaspa.thindha- Sikura-dha- Sena.sura-dha-",
        "nedel^a pondelok utorok streda s^tvrtok piatok sobota",
        "Nedelja Ponedeljek Torek Sreda Cxetrtek Petek Sobota",
        "domingo lunes martes miércoles jueves viernes sábado",
        "sonde mundey tude-wroko dride-wroko fode-wroko freyda Saturday",
        "Jumapili Jumatatu Jumanne Jumatano Alhamisi Ijumaa Jumamosi",
        "söndag måndag tisdag onsdag torsdag fredag lordag",
        "Linggo Lunes Martes Miyerkoles Huwebes Biyernes Sabado",
        "Lé-pài-jít Pài-it Pài-jï Pài-sañ Pài-sì Pài-gÖ. Pài-lák",
        "wan-ar-tit wan-tjan wan-ang-kaan wan-phoet wan-pha-ru-hat-sa-boh-die wan-sook wan-sao",
        "Tshipi Mosupologo Labobedi Laboraro Labone Labotlhano Matlhatso",
        "Pazar Pazartesi Sali Çar,samba Per,sembe Cuma Cumartesi",
        "nedilya ponedilok vivtorok sereda chetver pyatnytsya subota",
        "Chu?_Nhâ.t Thú*_Hai Thú*_Ba Thú*_Tu* Thú*_Na'm Thú*_Sáu Thú*_Ba?y",
        "dydd_Sul dyds_Llun dydd_Mawrth dyds_Mercher dydd_Iau dydd_Gwener dyds_Sadwrn",
        "Dibeer Altine Talaata Allarba Al_xebes Aljuma Gaaw",
        "iCawa uMvulo uLwesibini uLwesithathu uLuwesine uLwesihlanu uMgqibelo",
        "zuntik montik dinstik mitvokh donershtik fraytik shabes",
        "iSonto uMsombuluko uLwesibili uLwesithathu uLwesine uLwesihlanu uMgqibelo",
        "Dies_Dominica Dies_Lunæ Dies_Martis Dies_Mercurii Dies_Iovis Dies_Veneris Dies_Saturni",
        "Bazar_gÜnÜ Bazar_ærtæsi Çærs,ænbæ_axs,amò Çærs,ænbæ_gÜnÜ CÜmæ_axs,amò CÜmæ_gÜnÜ CÜmæ_Senbæ",
        "Sun Moon Mars Mercury Jove Venus Saturn",
        "zondag maandag dinsdag woensdag donderdag vrijdag zaterdag",
        "KoseEraa GyoOraa BenEraa Kuoraa YOwaaraa FeEraa Memenaa",
        "Sonntag Montag Dienstag Mittwoch Donnerstag Freitag Sonnabend",
        "Domingo Luns Terza_feira Corta_feira Xoves Venres Sábado",
        "Dies_Solis Dies_Lunae Dies_Martis Dies_Mercurii Dies_Iovis Dies_Veneris Dies_Sabbatum",
        "xing-_qi-_tiàn xing-_qi-_yi-. xing-_qi-_èr xing-_qi-_san-. xing-_qi-_sì xing-_qi-_wuv. xing-_qi-_liù",
        "djadomingu djaluna djamars djarason djaweps djabièrnè djasabra",
        "Killachau Atichau Quoyllurchau Illapachau Chaskachau Kuychichau Intichau",
    }; // []const []const u8
    var i: i32 = 0; // i32
    while (i < @as(i32, @intCast((lines).len))) {
        const words = fields(lines[i]); // []const []const u8
        const l = abbrevLen(words); // i32
        std.debug.print("{s}\n", .{_concat_string(_concat_string(pad2(l), "  "), lines[i])});
        i = (i + 1);
    }
}

pub fn main() void {
    user_main();
}
